// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with expense 1`] = `
<div>
  <h1>
    Expense List
  </h1>
  <p>
    Viewving 
     expenses totalling:  
    $0.00
  </p>
  <Connect(Expense)
    amount={123}
    createdAt={"1970-01-01T00:00:00.000Z"}
    description="gum"
    id="1"
    key="1"
    note="gum"
  />
  <Connect(Expense)
    amount={7890}
    createdAt={"1969-12-31T23:59:59.000Z"}
    description="rent"
    id="2"
    key="2"
    note="rent"
  />
  <Connect(Expense)
    amount={4000}
    createdAt={"1970-01-01T00:00:01.000Z"}
    description="Credit Card"
    id="3"
    key="3"
    note="Credit Card"
  />
</div>
`;

exports[`should render ExpenseList with no expense 1`] = `
<div>
  <h1>
    Expense List
  </h1>
  <p>
    Viewving 
     expenses totalling:  
    $0.00
  </p>
  <p>
    No expenses
  </p>
</div>
`;
